tests/NormalTests/paczka1/fuzzy1/17653240.err
Error in line 6: iGn4rc S264 11,8
Error in line 1: ajAtd S128 93,7
Error in line 12: nY6n S128 48,4
Error in line 15: AbcpgXR A754 71,2
Error in line 13: ajAtd A754 61,2
Error in line 19: nY6n A342 0,8
Error in line 27: nY6n S128 51,9
Error in line 28: Hzx7Sxou S128 27,2
Error in line 36: nY6n A754 -4,1
Error in line 32: nY6n A754 98,3
